remove index reader with path